--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/blogger.svg" />
+    <link rel="icon" type="image/svg+xml" href="/blog.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>blog</title>
+    <title>ZBlog</title>
   </head>
   <body>
     <div id="app"></div>
